# robot-bird

./: .gitignore  CMakeLists.txt  README.md  package.xml  robotic_bird.urdf
install/: local_setup.sh  setup.sh
install/robotic_bird/lib/robotic_bird/: flight_controller  navigator
install/robotic_bird/share/ament_index/resource_index/package_run_dependencies/: robotic_bird
install/robotic_bird/share/ament_index/resource_index/parent_prefix_path/: robotic_bird
install/robotic_bird/share/robotic_bird/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotic_bird/share/robotic_bird/cmake/: robotic_birdConfig-version.cmake  robotic_birdConfig.cmake
install/robotic_bird/share/robotic_bird/environment/: ament_prefix_path.dsv  path.dsv
install/robotic_bird/share/robotic_bird/launch/: sim_launch.py
install/robotic_bird/share/robotic_bird/rviz/: robot_bird.rviz
install/robotic_bird/share/robotic_bird/urdf/: robotic_bird.urdf.xacro
install/robotic_bird/share/robotic_bird/worlds/: robot_bird.world
launch/: sim_launch.py
nodes/: odom_to_tf.py  target_publisher.py
plugins/: flap_plugin.cpp
rviz/: robot_bird.rviz
src/: flight_controller.cpp  navigator.cpp
urdf/: robotic_bird.urdf.xacro
worlds/: robot_bird.world
