<?xml version="1.0"?>
<package format="3">
  <name>robotic_bird</name>
  <version>0.0.1</version>
  <description>Robotic Bird - fly to target point (ROS2 + Gazebo)</description>
  <maintainer email="you@example.com">Selim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 deps -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
